--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -8,12 +8,12 @@
     font-size: 36px;
 }
 
+#fourth,
 #third {
     font-size: 24px;
 }
 
 #fourth {
     background-color: lightgreen;
-    font-size: 24px;
     font-weight: bold;
 }
