--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,23 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.header > * {
+  display: flex;
+  align-items: center;
+}
+
+.header > *,
+.links {
+  gap: 16px;
+}
+
+.links {
+  display: flex;
 }
 
 .profile-image {
@@ -45,4 +62,6 @@ a {
 
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
