--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,17 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.header > * {
+  flex: 0 1 0;
 }
 
 img {
@@ -10,6 +22,16 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+.fruits {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.fruit {
+  max-width: 200px;
 }
 
 /* do not edit this footer */
