--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,18 +5,45 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template: 2fr 1fr 15fr 1fr / 1fr 4fr;
+  gap: 4px;
+  grid-template-areas:
+  "header header"
+  "sidebar nav"
+  "sidebar article"
+  "footer footer";
 }
 
 .container div {
   padding: 15px;
   font-size: 32px;
-  font-family: Helvetica;
+  font-family: Helvetica, serif;
   font-weight: bold;
   color: white;
 }
 
 .header {
   background-color: #393f4d;
+  grid-area: header;
+  display: grid;
+  grid-template-columns: 1fr 2.25fr;
+}
+
+.logo {
+  justify-self: start;
+  align-self: center;
+}
+
+.menu {
+  align-self: center;
+}
+
+.menu ul,
+.nav ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
 }
 
 .menu ul,
@@ -26,6 +53,15 @@
 
 .sidebar {
   background-color: #C50208;
+  grid-area: sidebar;
+  display: grid;
+  gap: 50px;
+}
+
+.sidebar .photo,
+.side-content {
+  display: grid;
+  align-items: center;
 }
 
 .sidebar .photo {
@@ -46,6 +82,7 @@
 
 .nav {
   background-color: #C50208;
+  grid-area: nav;
 }
 
 .nav ul li {
@@ -55,6 +92,10 @@
 
 .article {
   background-color: #bccbde;
+  grid-area: article;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -68,6 +109,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,6 +125,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-area: footer;
 }
 
 .footer p {
